--- a/build.config
+++ b/build.config
@@ -122,10 +122,10 @@ CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_UK=y
 
 ### Include NTFS-3G FUSE driver (instead of Paragon "ufsd"). ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
+#CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
 
 ### Include LPR printer daemon. ~0.12MB
-CONFIG_FIRMWARE_INCLUDE_LPRD=y
+#CONFIG_FIRMWARE_INCLUDE_LPRD=y
 
 ### Include USB-over-Ethernet printer daemon. ~0.05MB
 #CONFIG_FIRMWARE_INCLUDE_U2EC=y
@@ -137,7 +137,7 @@ CONFIG_FIRMWARE_INCLUDE_LPRD=y
 #CONFIG_FIRMWARE_INCLUDE_SOCAT=y
 
 ### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_HDPARM=y
+#CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 
 ### Include "parted" utility (allow make GPT partitions). ~0.3MB
 #CONFIG_FIRMWARE_INCLUDE_PARTED=y
@@ -152,7 +152,7 @@ CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 #CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
 
 ### Include FTP server. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_FTPD=y
+#CONFIG_FIRMWARE_INCLUDE_FTPD=y
 #CONFIG_FIRMWARE_INCLUDE_FTPD_SSL=y
 
 ### Include alternative L2TP control client RP-L2TP. ~0.1MB
@@ -180,7 +180,7 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 #CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
+#CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
 ### Include StrongSwan. XFRM modules ~0.2MB, strongswan ~0.7MB
 #CONFIG_FIRMWARE_INCLUDE_SSWAN=y
